# memory-palace

./: .gitattributes  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
docs/: README.md  architecture.md  models.md  use-cases.md
installer/: ARCHITECTURE.md
installer/gui/: __init__.py  app.py
installer/linux/: run_gui.py
installer/macos/: run_gui.py
installer/shared/: __init__.py  clients.py  detect.py  install_core.py  models.py
installer/windows/: build_bundled_exe.py  bundled_setup_gui.py  run_gui.py
mcp_server/tools/: forget.py  get_memory.py  link.py  mark_handoff_read.py  memory_stats.py  recall.py  remember.py  supersede.py
memory_palace/: config.py  config_v2.py  database_v2.py  embeddings.py  llm.py  models_v2.py
memory_palace/services/: __init__.py  handoff_service.py  memory_service.py
tools/: migrate_to_postgres.py
